objects/Product_Model__c.object
<CustomObject>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <externalId>true</externalId>
        <label>Launchbox ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_ID_Text__c</fullName>
        <label>Model ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_MSRP__c</fullName>
        <label>Model MSRP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model_Marketing_Name__c</fullName>
        <label>Model Marketing Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <label>Model Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model_Group_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Model Group Id</label>
        <referenceTo>Product_Model_Group__c</referenceTo>
        <relationshipLabel>Product Models</relationshipLabel>
        <relationshipName>Product_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Model</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Product Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>